Refactor: 교정 도메인 조회 api에서 pageResponse로 응답 반환값 통일 및 1부터 시작하도록 설정